--- a/C_implementation/full_filter_stack_implementation/full_filter_stack_implementation.cbp
+++ b/C_implementation/full_filter_stack_implementation/full_filter_stack_implementation.cbp
@@ -11,7 +11,7 @@
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
-				<Option parameters="sourceImgs/testImage.jpg" />
+				<Option parameters="sourceImgs/plateDay1.5m.jpg" />
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
