bounding box algorithm done

--- a/C_implementation/full_filter_stack_implementation/full_filter_stack_implementation.cbp
+++ b/C_implementation/full_filter_stack_implementation/full_filter_stack_implementation.cbp
@@ -38,6 +38,7 @@
 			<Option link="0" />
 		</Unit>
 		<Unit filename="ImgMtx.h" />
+		<Unit filename="boundingBoxStructs.h" />
 		<Unit filename="filterStages.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="stb_image.h" />
