--- a/C_implementation/pi_code/CamRunTest/CMakeLists.txt
+++ b/C_implementation/pi_code/CamRunTest/CMakeLists.txt
@@ -8,4 +8,4 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 project(CamRunTest)
 add_executable(CamRunTest main.cpp)
 include_directories(CamRunTest src/)
-set(CMAKE_CXX_FLAGS "-Wall -pthread -O3")
+set(CMAKE_CXX_FLAGS "-Wall -O3 -pthread -std=c++20")
