--- a/C_implementation/pi_code/CamRunTest/.vscode/settings.json
+++ b/C_implementation/pi_code/CamRunTest/.vscode/settings.json
@@ -61,6 +61,7 @@
         "streambuf": "cpp",
         "thread": "cpp",
         "typeinfo": "cpp",
-        "future": "cpp"
+        "future": "cpp",
+        "fstream": "cpp"
     }
 }
