started work on motion detection code written bash script and a few functions

--- a/C_implementation/motion_detection/CMakeLists.txt
+++ b/C_implementation/motion_detection/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
-project(CamRunTest)
-add_executable(CamRunTest main.cpp)
-include_directories(CamRunTest src/)
+project(motionTest)
+add_executable(motionTest main.cpp)
+include_directories(motionTest src/)
 set(CMAKE_CXX_FLAGS "-Wall -O3 -pthread -std=c++20")
