--- a/C_implementation/pi_code/combined_test/CMakeLists.txt
+++ b/C_implementation/pi_code/combined_test/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
-project(motionTest)
-add_executable(motionTest main.cpp)
-include_directories(motionTest src/)
+project(combinedTest)
+add_executable(combinedTest main.cpp)
+include_directories(combinedTest src/)
 set(CMAKE_CXX_FLAGS "-Wall -O3 -pthread -std=c++20 -static")
